--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 Trabalho referente a avaliação da primeira unidade da disciplina de Inteligência Artificial para Jogos I, da Universidade Federal do Rio Grande do Norte.
 
 É necessário a criação dos diretórios build e bin para o funcionamento do Makefile.
+
+Para acessar as novas fases, deve-se pressionar "c" e "n". c para a nova fase e n para a fase normal.
